# ubiquitous-spoon

./: README.md  sample-curl.sh
.github/workflows/: build.yml
app/: Cargo.toml  Dockerfile
app/src/: main.rs
app/src/handlers/: common.rs  db.rs
app/src/models/: mod.rs
backend/: .dockerignore  Cargo.toml  Dockerfile
backend/src/: main.rs
backend/src/handlers/: db.rs  mod.rs  redis.rs  routes.rs
backend/src/models/: mod.rs
deployment/docker/: docker-compose.yaml  env_file
frontend/: .dockerignore  Cargo.toml  Dockerfile  README.md  index.html  script.js  styles.css
frontend/src/: main.rs
