[package]
name = "ubiquitous-spoon"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4" }
base62 = "2.2.1"
mongodb = "3.2.4"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["add-extension", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
