[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4" }
base62 = "2.2.1"
chrono = "0.4.41"
mongodb = "3.2.4"
redis = { version = "0.32.5", features = ["aio", "async-std-comp", "tokio-comp"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["add-extension", "trace", "cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
