[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6" }
base62 = "2.2.3"
chrono = "0.4.42"
mongodb = "3.3.0"
redis = { version = "0.32.6", features = ["aio", "async-std-comp", "tokio-comp"] }
serde = { version = "1.0.228", features = ["derive"] }
validator = { version = "0.20.0", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["add-extension", "trace", "cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
